kubernetes - dockers/grpc/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-service
  namespace: project
spec:
  selector:
    app: grpc
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
