kubernetes - dockers/grpc/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grpc-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
  namespace: project
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: grpc-service
          servicePort: 5000
